
Changelog for relaydelay.pl and associated files:

UNRELEASED -

  2003-07-13 - NEW OPTION - Added a config option to limit the number of 
    threads the milter will spawn.  Once a thread is spawned it will continue
    to exist until the milter is shutdown.  Since each thread increases the
    memory footprint, and consumes a db connection, this is a good way to 
    limit both.

  2003-07-12 - Fixed a small problem where bounce messages were not properly
    expired as they should be.  Also fixed some minor warnings.

  2003-07-11 - Backed out changes for trying to fix the accounting error of
    a few days ago.  The "solution" caused more trouble  than the problem.

  2003-07-10 - NEW OPTION - Added a new feature to automatically 
    pre-whitelist recipients of locally generated outbound mail.  Mail that 
    is relayed for another IP-wildcard whitelisted host, or sent from an 
    authenticated sender is also considered local for the purposes of this 
    feature.

  2003-07-10 - Removed the table locking from the milter.  Made some changes
    to a few queries to make the ordering of returned rows deterministic.
    As a result of the removing the DB locks, there is now a very small 
    (miniscule) race condition that may allow duplicate rows to be 
    inserted into the database, but the changes to the queries makes it so
    that duplicates will not cause any noticable harm.

  2003-07-09 - Uncovered a slight accounting problem in the milter that 
    caused some rows not to be expired as they should, as well as 
    incorrectly updating the passed_count.  The problem only shows itself
    if there is another MX host forwarding for a domain.  Changed the milter
    so that we do not increment the passed count if the outmailer is not
    local (if the mail will be forwarded to another host).  This will keep
    the counts of individual emails correct (rather than relay hops), and 
    will keep records stemming from mails to invalid users from being 