@@ -1,5 +1,5 @@
 
-##################################################################
+#############################################################################
 #
 # File: relaydelay.conf
 #
@@ -8,10 +8,11 @@
 #
 # Notes:
 #   The default location for this file is /etc/mail.  If you 
-#   decide to store it elsewhere, change the $config_file variable
-#   in the main script.
+#   decide to store it elsewhere, you must either change the $config_file 
+#   variable in the main script, or specify the location of this file as
+#   the command line parameter to the milter.
 #
-##################################################################
+#############################################################################
 
 use strict;
 
@@ -31,6 +32,23 @@ $database_port = 3306;
 $database_user = 'db_user';
 $database_pass = 'db_pass';
 
+# Set this to indicate the milter "name" that this milter will be 
+#   identified by.  This must match the first parameter from the 
+#   INPUT_MAIL_FILTER definition in the sendmail.mc configuration.
+my $milter_filter_name = 'relaydelay';
+
+# This parameter determines how the milter interfaces with the libmilter
+#   API.  Normally, if using a milter on the same machine that is running
+#   sendmail, it will be something like 'local:/var/run/relaydelay.sock', 
+#   but if you want to run the milter on a different machine than is running 
+#   sendmail, you will need to specify how to connect to that copy of 
+#   sendmail by setting this to indicate the machine and port that the 
+#   remote sendmail is listening for connections on with something 
+#   similar to 'inet:2526@sendmail.server.org'.
+# This parameter must match the S= option in the INPUT_MAIL_FILTER
+#   definition in the sendmail.mc file.
+my $milter_socket_connection = 'local:/var/run/relaydelay.sock';
+
 # Set this to something nonzero to limit the number of children that the 
 #   milter will spawn.  Since children are never recycled (there seems 
 #   to be a problem doing that with Sendmail::Milter), threads,
@@ -38,7 +56,7 @@ $database_pass = 'db_pass';
 #   also consumes a database connection, so limiting db connections and
 #   memory footprint are both good reasons to set this.
 # Setting to zero makes the number of threads unlimited.
-$maximum_milter_threads = 40;
+my $maximum_milter_threads = 40;
 
 # This determines how many seconds we will block inbound mail that is
 #   from a previously unknown [ip,from,to] triplet.  If it is set to
@@ -47,19 +65,19 @@ $maximum_milter_threads = 40;
 #   will learn spammers as well as legitimate senders.
 #   If it is set to a negative number (like -1), then the mail will
 #   be tempfailed the first time it is seen, but accepted thereafter.
-$delay_mail_secs = 58 * 60;  # 58 Minutes
+my $delay_mail_secs = 58 * 60;  # 58 Minutes
 
 # This determines how many seconds of life are given to a record that is
 #   created from a new mail [ip,from,to] triplet.  Note that the window
 #   created by this setting for passing mails is reduced by the amount
 #   set for $delay_mail_secs.
 # NOTE: See Also: update_record_life and update_record_life_secs.
-$auto_record_life_secs = 5 * 3600;  # 5 Hours
+my $auto_record_life_secs = 5 * 3600;  # 5 hours
 
 # True if we should update the life of a record when passing a mail
 #   This should generally be enabled, unless the normal lifetime
 #   defined by $auto_record_life_secs is already a large value.
-$update_record_life = 1;
+my $update_record_life = 1;
 
 # How much life (in secs) to give to a record we are updating from an
 #   allowed (passed) email.  Only useful if update_record_life is
